# xsee

./: .gitignore  LICENSE  README.md
.github/workflows/: render-readme.yml  tests.yml
docs/: README.template.md
docs/env/: Windows.md
drivers/cpp/: CMakeLists.txt  compile.ps1  main.cpp  vcpkg.json
drivers/js/: index.js  package.json  pnpm-lock.yaml
drivers/python/: main.py  pyproject.toml
engines/cpp/: CMakeLists.txt  CMakePresets.json  compile.ps1  main.cpp  vcpkg.json
engines/cpp/include/: Engine.h  HtmlDocument.h  html.h
engines/cpp/src/: HtmlDocument.cpp  html.cpp  main.cpp
engines/js/: index.js
engines/python/: .gitignore  main.py
engines/python/src/: main.py
scripts/: render_readme.py
tests/: run.ps1  test.py
tests/ebay/: expected.json  input.html  post.jq  xsee.yaml
tests/example/: example.xse.yaml  expected.json  input.html
